--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hao - LIFF</title>
+    <title>LINE Pay Money</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,11 +10,8 @@
           <a href="https://lin.ee/0LtQfBv" class="bttn">作者ID:</a>
         </div></center>
     <center>
-        <h2><button class="button button1" id="textx">文字</button></h2>
-        <h2><button class="button button2" id="imagex">圖片</button></h2>
-        <h2><button class="button button3" id="videox">影片</button></h2>
-        <h2><button class="button button4" id="audiox">語音</button></h2>
-        <h2><button class="button button5" id="stickerx">貼圖</button></h2></center>
+		<img src="img.png" with="300" heigh="300" alt="一張圖片">
+    </center>
     <center>
         <h2 style="color: #3f3f3f;">Author by <a href="https://keezxc1223.github.io/" style="color: #3f3f3f; text-decoration: none; font-size: 20px;">TimHao.</a></h2>
         <h3><code style="color: #3f3f3f;"><i><a href="https://keezxc1223.github.io/" style="color: #3f3f3f; text-decoration: none;">Hao. </a> &copy; 2022</i></code></h3>
