--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 <body>
     <center>
         <div class="flex">
-          <a href="https://lin.ee/0LtQfBv" class="bttn">作者ID:</a>
+          <a href="https://store.line.me/stickershop/product/18844094" class="bttn">去買偶的貼圖</a>
         </div></center>
     <center>
-	<img src="img.png" with="300" heigh="300" alt="一張圖片">
+		<img src="img.png" with="300" heigh="300" alt="一張圖片">
     </center>
     <center>
-        <h2 style="color: #3f3f3f;">Author by <a href="https://keezxc1223.github.io/" style="color: #3f3f3f; text-decoration: none; font-size: 20px;">TimHao.</a></h2>
-        <h3><code style="color: #3f3f3f;"><i><a href="https://keezxc1223.github.io/" style="color: #3f3f3f; text-decoration: none;">Hao. </a> &copy; 2022</i></code></h3>
+        <h2 style="color: #3f3f3f;">Author by <a href="https://lala870617.github.io" style="color: #3f3f3f; text-decoration: none; font-size: 20px;">Lala Chen.</a></h2>
+        <h3><code style="color: #3f3f3f;"><i><a href="https://lala870617.github.io" style="color: #3f3f3f; text-decoration: none;">Lala </a> &copy; 2022</i></code></h3>
     </center>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
-    <script src="liff-starter.js"></script>
 </body>
