--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
         <h3><code style="color: #3f3f3f;"><i><a href="https://lala870617.github.io" style="color: #3f3f3f; text-decoration: none;">Lala </a> &copy; 2022</i></code></h3>
     </center>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+    <script src="liff-starter.js"></script>
 </body>
