--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LINE Pay Money</title>
-    <link rel="stylesheet" href="style.css">
+    <title>愚人節快樂</title>
+    <link rel="stylesheet">
 </head>
 
 <body>
     <center>
-        <div class="flex">
-          <a href="https://store.line.me/stickershop/product/18844094" class="bttn">去買偶的貼圖</a>
-        </div></center>
     <center>
 		<img src="img.png" with="300" heigh="300" alt="一張圖片">
     </center>
