--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <center>
     <center>
-	<img src="img.png" with="300" heigh="300" alt="一張圖片">
+	<img src="img.jpg" with="300" heigh="300" alt="ㄏㄏ">
     </center>
     <center>
         <h2 style="color: #3f3f3f;">Author by <a href="https://ithelp.ithome.com.tw/users/20133286/ironman/4388" style="color: #3f3f3f; text-decoration: none; font-size: 20px;">Lala Chen.</a></h2>
