--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <h3><code style="color: #3f3f3f;"><i><a href="https://ithelp.ithome.com.tw/users/20133286/ironman/4388" style="color: #3f3f3f; text-decoration: none;">Lala </a> &copy; 2022</i></code></h3>
     </center>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
