--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <script src="https://static.line-scdn.net/liff/edge/versions/2.1.13/sdk.js"></script>    
     <script src="liff-starter.js"></script>
+    <script src="liff-init-message.js"></script>  
 </body>
