--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2 style="color: #3f3f3f;">Author by <a href="https://ithelp.ithome.com.tw/users/20133286/ironman/4388" style="color: #3f3f3f; text-decoration: none; font-size: 20px;">Lala Chen.</a></h2>
         <h3><code style="color: #3f3f3f;"><i><a href="https://ithelp.ithome.com.tw/users/20133286/ironman/4388" style="color: #3f3f3f; text-decoration: none;">Lala </a> &copy; 2022</i></code></h3>
     </center>
-    <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+    <!--<script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script> -->
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <script src="https://static.line-scdn.net/liff/edge/versions/2.1.13/sdk.js"></script>    
     <script src="liff-starter.js"></script>
